# trap-schema

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
src/trap_schema/: __init__.py  base.py  datapackage.py  dataset.py  fields.py  schema.py  tables.py  transform.py
tests/: helpers.py  test_datapackage.py  test_table.py  test_validation.py
tools/: docstrings.py
