[project]
name = "trap-schema"
version = "0.2.0"
description = "An unofficial implementation of the Camtrap DP 1.0.2 datapackage standard with explicit Python dataclasses and pydantic. Intended to help developers with exporting their data to the Camtrap DP 1.0.2 datapackage format."
readme = "README.md"
authors = [
    { name = "asgersvenning", email = "asgersvenning@ecos.au.dk" }
]
requires-python = ">=3.12"
dependencies = [
    "frictionless>=5.19.0",
    "geojson>=3.2.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
]
notebook = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
]

[dependency-groups]
dev = [
    "jsonref>=1.1.0",
    "libcst>=1.8.6",
    "ruff>=0.3.0",
    "trap-schema[test,notebook]",
]

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
# E: pycodestyle, F: Pyflakes, UP: pyupgrade, I: isort (sorts imports cleanly)
select = ["E", "F", "UP", "I"]


[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
